force-app/main/default/objects/Branch__c/fields/Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code__c</fullName>
    <displayFormat>BR-{0000}</displayFormat>
    <label>Branch Code</label>
    <type>AutoNumber</type>
</CustomField>