force-app/main/default/objects/Branch__c/fields/Branch_Status__c.field-meta.xml
<CustomField>
    <fullName>Branch_Status__c</fullName>
    <label>Branch Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Temporarily Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>