force-app/main/default/objects/Branch__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee</relationshipLabel>
    <relationshipName>Employee_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>