force-app/main/default/objects/Branch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Branch_Code__c</columns>
    <columns>Branch_Name__c</columns>
    <columns>Location__c</columns>
    <columns>Manager__c</columns>
    <columns>Operating_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>